--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "unwrapper",
   "displayName": "PLSQL Unwrapper",
   "description": "PLSQL Unwrapper unwraps the wrapped oracle PL/SQL code",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "engines": {
     "vscode": "^1.67.0"
   },
@@ -13,6 +13,7 @@
   "activationEvents": [
     "onStartupFinished"
   ],
+  "icon": "icons/icon.png",
   "main": "./extension.js",
   "contributes": {
     "commands": [
@@ -51,5 +52,5 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/hammad11ali/PLSQL-Unwrapper/tree/master"}
+    "url": "https://github.com/hammad11ali/OraclePLSQLUnwrapper"}
 }
