--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "PLSQL Unwrapper unwraps the wrapped oracle PL/SQL code",
   "version": "0.0.2",
   "engines": {
-    "vscode": "^1.67.0"
+    "vscode": "^1.6.0"
   },
   "categories": [
     "Other"
@@ -31,6 +31,11 @@
         "command": "unwrapper.unwrap",
         "key": "ctrl+shift+u",
         "mac": "ctrl+shift+u"
+      },
+      {
+        "command": "unwrapper.format",
+        "key": "ctrl+alt+u",
+        "mac": "ctrl+alt+u"
       }
     ]
   },
